--- a/pymaceuticals_Solved.ipynb
+++ b/pymaceuticals_Solved.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
        "4    Male          21          25  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,14 +146,15 @@
     "study_results = pd.read_csv(study_results_path)\n",
     "\n",
     "# Combine the data into a single DataFrame\n",
+    "results_by_mouse = pd.merge(study_results,mouse_metadata, on='Mouse ID', how='inner')\n",
     "\n",
-    "\n",
-    "# Display the data table for preview\n"
+    "# Display the data table for preview\n",
+    "results_by_mouse.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -162,18 +163,19 @@
        "249"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Checking the number of mice.\n"
+    "# Checking the number of mice.\n",
+    "results_by_mouse['Mouse ID'].nunique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -182,19 +184,23 @@
        "array(['g989'], dtype=object)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Our data should be uniquely identified by Mouse ID and Timepoint\n",
-    "# Get the duplicate mice by ID number that shows up for Mouse ID and Timepoint. \n"
+    "# Get the duplicate mice by ID number that shows up for Mouse ID and Timepoint. \n",
+    "\n",
+    "duplicate_mice = results_by_mouse[results_by_mouse.duplicated(subset=['Mouse ID', 'Timepoint'], keep=False)]\n",
+    "duplicate_mouse_ids = duplicate_mice['Mouse ID'].unique()\n",
+    "duplicate_mouse_ids\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -408,18 +414,19 @@
        "1592  Female          21          26  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Optional: Get all the data for the duplicate mouse ID. \n"
+    "# Optional: Get all the data for the duplicate mouse ID. \n",
+    "results_by_mouse[results_by_mouse['Mouse ID'].isin(duplicate_mouse_ids)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -529,18 +536,22 @@
        "4    Male          21          25  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Create a clean DataFrame by dropping the duplicate mouse by its ID.\n"
+    "# Create a clean DataFrame by dropping the duplicate mouse by its ID.\n",
+    "Deduped_results = results_by_mouse[~results_by_mouse['Mouse ID'].isin(duplicate_mouse_ids)]\n",
+    "\n",
+    "# Display the cleaned DataFrame\n",
+    "Deduped_results.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -549,13 +560,14 @@
        "248"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Checking the number of mice in the clean DataFrame.\n"
+    "# Checking the number of mice in the clean DataFrame.\n",
+    "Deduped_results['Mouse ID'].nunique()"
    ]
   },
   {
@@ -1166,7 +1178,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
